--- a/bar_chart/graphic.less
+++ b/bar_chart/graphic.less
@@ -1,1 +1,13 @@
 @import "./lib/base";
+
+.labels li{
+	font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
+	font-size: 1em;
+	line-height: 1em;
+	padding-right: 10px;
+}
+
+.value text{
+	font-family: GothamNarrow-Bold, "Helvetica", "Arial", sans-serif;
+    font-size: 1em;
+}
