--- a/dot_chart/graphic.less
+++ b/dot_chart/graphic.less
@@ -3,13 +3,13 @@
 .bars line {
     fill: none;
     stroke-width: 3px;
-    stroke: #F5D1CA;
+    stroke: #F3B9BA;
 }
 
 .dots circle {
     stroke-width: 1px;
     stroke: #fff;
-    fill: #D8472B;
+    fill: #C62C31;
 }
 
 .value text {
@@ -22,4 +22,15 @@
     fill: #fff;
     stroke: #fff;
     stroke-width: 5px;
+}
+
+.labels li{
+    font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
+    font-size: 0.9em;
+}
+
+.value text{
+    font-family: GothamNarrow-Bold, "Helvetica", "Arial", sans-serif;
+    font-size: 0.9em;
+    fill: #444446;
 }
