--- a/grouped_bar_chart/graphic.less
+++ b/grouped_bar_chart/graphic.less
@@ -6,6 +6,12 @@
 
 .axis .tick text{
 	font-family: GothamNarrow-Book, "Helvetica", "Arial", sans-serif;
+    font-size: 1.3em;
+}
+
+.labels li{
+    font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
+    font-size: 0.9em;
 }
 
 .value text{
