--- a/line_chart/graphic.less
+++ b/line_chart/graphic.less
@@ -6,10 +6,25 @@
   stroke: #ccc;
 }
 
+.axis line {
+    stroke-width: 3px;
+}
+
+.grid .tick {
+    stroke: #78797C;
+    color: #78797C;
+}
+
 .value text {
-  font-size: 12px;
-  font-weight: bold;
-  fill: #999;
+  font-size: 0.9em;
+  fill: #444446;
+  font-family: GothamNarrow-Bold, "Helvetica", "Arial", sans-serif;
+}
+
+.key .key-item b {
+    width: 20px;
+    height: 5px;
+    float: none;
 }
 
 @media screen and (max-width: 500px) {
