--- a/stacked_bar_chart/graphic.less
+++ b/stacked_bar_chart/graphic.less
@@ -2,6 +2,8 @@
 
 .value text {
     fill: #fff;
+    font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
+    font-size: 0.85em;
 
     &.hidden {
         display: none;
