--- a/stacked_column_chart/graphic.less
+++ b/stacked_column_chart/graphic.less
@@ -7,3 +7,18 @@
         display: none;
     }
 }
+
+.grid > .tick:nth-of-type(1) {
+    stroke-width: 1px;
+}
+
+.axis path, .axis line {
+    fill: none;
+    stroke: #78797C;
+    shape-rendering: crispEdges;
+    stroke-width: 3px;
+}
+
+.x.axis .tick line{
+	display: none;
+}
