--- a/_base/lib/base.less
+++ b/_base/lib/base.less
@@ -4,7 +4,8 @@
 @screen-mobile: ~"screen and (max-width: 500px)";
 
 // Colors
-@red1       : #6C2315;
+//NPR Colors (keep for now as it is used in different places)
+@red1       : #FFD000;
 @red2       : #A23520;
 @red3       : #D8472B;
 @red4       : #E27560;
@@ -39,6 +40,88 @@
 @blue5      : #A8D5EF;
 @blue6      : #D3EAF7;
 
+//CQRC color palette
+@charttitle : #444446;
+@charttext : #231F20;
+@cqred      : #8F192A;
+@cqyellow   : #FFD000;
+@cqgraymain      : #515C5F;
+@cqgray1      : #C9CCD3;
+@cqgray2      : #E4E8EA;
+@graymain      : #808284;
+@gray1      : #E2E3E4;
+@gray2      : #C0C2C4;
+@gray3      : #898B8E;
+@graydark      : #404041;
+@rcslatemain     : #3E4E64;
+@rcslate1      : #E2E5E8;
+@rcslate2      : #BBC1C8;
+@rcslate3      : #788391;
+@rcslatedark      : #253244;
+@rchighlightmain   : #F9A51A;
+@rchighlight1 : #FEEDD9;
+@rchighlight2 : #FEDFBC;
+@rchighlight3 : #FCBF79;
+@rchighlightdark : #B97B0E;
+@sky: #8BC0D8;
+@raspberryhohmain : #A6396D;
+@raspberryhoh1 : #F2E1E9;
+@raspberryhoh2 : #E1BACB;
+@raspberryhoh3 : #C37597;
+@raspberryhohdark : #7C2651;
+@jademultimediamain : #05B69C;
+@jademultimedia1 : #D8F4F1;
+@jademultimedia2 : #BCECE6;
+@jademultimedia3 : #4DCCBB;
+@jademultimediadark : #008976;
+@mangocolumnistsmain : #D7614F;
+@mangocolumnists1 : #FBE5E5;
+@mangocolumnists2 : #E69187;
+@mangocolumnists3 : #EA7972;
+@mangocolumnistsdark : #A1A738;
+@dembluemain : #005383;
+@demblue1 : #D9EAF0;
+@demblue2 : #AFC9D7;
+@demblue3 : #6094B1;
+@dembluedark : #003B62;
+@repubredmain : #C62C31;
+@repubred1 : #FAE1E2;
+@repubred2 : #F3B9BA;
+@repubred3 : #E77376;
+@repubreddark : #921D1E;
+@grapemain :  #544F90;
+@grape1 : #E8E6F0;
+@grape2 : #C9C5DB;
+@grape3 : #938CB8;
+@grapedark : #3E386D;
+@goldmain : #C19346;
+@gold1 : #F6EFE5;
+@gold2 : #EAD9C3;
+@gold3 : #D5B385;
+@golddark : #8E6E31;
+@orangemain : #CE5C37;
+@orange1 : #F6E7E2;
+@orange2 : #EAC68D;
+@orange3 : #D58E7B;
+@orangedark : #994423;
+@turquoisemain : #0E869A;
+@turquoise1 : #D9EDF1;
+@turquoise2 : #A6D5DB;
+@turquoise3 : #4DABB6;
+@turquoisedark : #036574;
+@grassmain : #459C59;
+@grass1 : #E5F1E7;
+@grass2 : #C2DDC8;
+@grass3 : #85BC91;
+@grassdark : #2E7742;
+@lipstickmain : #C73D49;
+@lipstick1 : #F6E2E4;
+@lipstick2 : #E9BABF;
+@lipstick3 : #D4757F;
+@lipstickdark : #942A33;
+@gridlinesgridlines : #A1A1A1;
+@baselinesbaselines : #5B5B5B;
+
 // Fonts
 .gotham() {
   font-family: 'Gotham SSm',Helvetica,Arial,sans-serif;
@@ -69,6 +152,18 @@
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
+//CQRC FONTS
+.gotham-narrow-book() {
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
+  font-weight: normal;
+  font-weight: 400;
+}
+.gotham-narrow-bold() {
+  font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
+  font-weight: normal;
+  font-weight: 400;
+}
+
 // Mixins
 .clearfix() {
   &::after {
@@ -91,8 +186,9 @@ html { -webkit-text-size-adjust: none; }
 body {
   margin: 0;
   padding: 33px 0;
-  font: 14px/1.4 Helvetica, Arial, sans-serif;
-  color: #555;
+  //font: 14px/1.4 Helvetica, Arial, sans-serif;
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
+  color: #231F20;
   //remove 300ms click delay in Safari, AKA still the worst
   touch-action: manipulation;
 }
@@ -101,16 +197,19 @@ h1 {
   margin: 0 0 33px 0;
   font-size: 20px;
   color: #666;
-  font-family: 'Gotham SSm',Helvetica,Arial,sans-serif;
+  //font-family: 'Gotham SSm',Helvetica,Arial,sans-serif;
+  font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
   font-weight: normal;
   line-height: 1.3;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
+  color: #444446;
 }
 
 h2 {
   font-weight: normal;
-  color: #777;
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
+  color: #444446;
   font-size: 12px;
   margin: -22px 0 22px 0;
   line-height: 1.6;
@@ -118,7 +217,8 @@ h2 {
 
 h3 {
   margin: 0 0 15px 0;
-  font-family: 'Knockout 31 4r';
+  //font-family: 'Knockout 31 4r';
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
   font-weight: normal;
   text-transform: uppercase;
   padding-top: 0;
@@ -126,7 +226,7 @@ h3 {
   letter-spacing: 0.05em;
   -webkit-font-smoothing: antialiased;
   font-size: 12px;
-  color: #333;
+  color: #444446;
 }
 
 .nowrap {
@@ -138,26 +238,28 @@ h3 {
 
   h4 {
     margin: 2px 0 7px 0;
-    color: #666;
+    color: #444446;
     font-size: 11px;
   }
 }
 
 .footnotes p,
 .footer p {
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
   margin: 2px 0 0 0;
-  font-size: 11px;
+  font-size: 13px;
   line-height: 1.7;
-  color: #999;
+  color: #231F20;
 }
 
-.footer p { font-style: italic; }
+.footer p { font-style: normal; }
 .footer p em { font-style: normal; }
-.footnotes p strong { color: #666; }
+.footnotes p strong { color: #231F20; }
 
 a, a:link, a:visited {
   color: #4774CC;
   text-decoration: none;
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
 }
 
 a:hover, a:active { color: #bccae5; }
@@ -198,9 +300,10 @@ a:hover, a:active { color: #bccae5; }
     }
 
     label {
+      font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
       white-space: nowrap;
-      font-size: 12px;
-      color: #666;
+      font-size: 13px;
+      color: #231F20;
       font-weight: normal;
       -webkit-font-smoothing: antialiased;
     }
@@ -211,14 +314,19 @@ svg { overflow: hidden; }
 
 .axis {
   font-size: 11px;
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
-  fill: #999;
+  fill: #231F20;
 
   path,
   line {
     fill: none;
-    stroke: #ccc;
+    stroke: #78797C;
     shape-rendering: crispEdges;
+  }
+
+  .tick text{
+    font-size: 1.3em;
   }
 
   &.y {
@@ -231,10 +339,14 @@ svg { overflow: hidden; }
   path { display: none; }
 
   .tick {
-    stroke: #eee;
-    color: #eee;
+    stroke: #ADAFB2;
+    color: #ADAFB2;
     stroke-width: 1px;
     shape-rendering: crispEdges;
+  }
+
+  >.tick:nth-of-type(1){
+    stroke-width: 3px;
   }
 
   &.y {
@@ -243,7 +355,7 @@ svg { overflow: hidden; }
 }
 
 .zero-line  {
-  stroke: #666;
+  stroke: #78797C;
   stroke-width: 1px;
   shape-rendering: crispEdges;
 }
@@ -253,7 +365,7 @@ rect {
   shape-rendering: crispEdges;
 }
 
-.bars rect { fill: @teal3; }
+.bars rect { fill: @grassdark; }
 
 .labels {
   position: absolute;
@@ -261,13 +373,14 @@ rect {
   padding: 0;
   list-style-type: none;
   border: none;
+  font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
 
   li {
     position: absolute;
     text-align: right;
     font-size: 12px;
     line-height: 1.3;
-    color: #666;
+    color: #231F20;
     display: table;
     -webkit-font-smoothing: antialiased;
 
@@ -283,7 +396,7 @@ rect {
   -webkit-font-smoothing: antialiased;
 
   &.in { fill: #fff; }
-  &.out { fill: #999; }
+  &.out { fill: #444446; }
 }
 
 // HOMEPAGE
