styles stacked bar

--- a/stacked_grouped_column_chart/graphic.less
+++ b/stacked_grouped_column_chart/graphic.less
@@ -4,6 +4,8 @@
   fill: #fff;
   font-size: 11px;
   text-anchor: middle;
+  font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
+  font-size: 0.85em;
 
   &.hidden {
     display: none;
