updating sheets and small style tweaks.

--- a/_base/lib/base.less
+++ b/_base/lib/base.less
@@ -41,86 +41,86 @@
 @blue6      : #D3EAF7;
 
 //CQRC color palette
-@charttitle : #444446;
-@charttext : #231F20;
-@cqred      : #8F192A;
-@cqyellow   : #FFD000;
-@cqgraymain      : #515C5F;
-@cqgray1      : #C9CCD3;
-@cqgray2      : #E4E8EA;
-@graymain      : #808284;
-@gray1      : #E2E3E4;
-@gray2      : #C0C2C4;
-@gray3      : #898B8E;
-@graydark      : #404041;
-@rcslatemain     : #3E4E64;
-@rcslate1      : #E2E5E8;
-@rcslate2      : #BBC1C8;
-@rcslate3      : #788391;
-@rcslatedark      : #253244;
-@rchighlightmain   : #F9A51A;
-@rchighlight1 : #FEEDD9;
-@rchighlight2 : #FEDFBC;
-@rchighlight3 : #FCBF79;
-@rchighlightdark : #B97B0E;
-@sky: #8BC0D8;
-@raspberryhohmain : #A6396D;
-@raspberryhoh1 : #F2E1E9;
-@raspberryhoh2 : #E1BACB;
-@raspberryhoh3 : #C37597;
-@raspberryhohdark : #7C2651;
-@jademultimediamain : #05B69C;
-@jademultimedia1 : #D8F4F1;
-@jademultimedia2 : #BCECE6;
-@jademultimedia3 : #4DCCBB;
-@jademultimediadark : #008976;
+@charttitle          : #444446;
+@charttext           : #231F20;
+@cqred               : #8F192A;
+@cqyellow            : #FFD000;
+@cqgraymain          : #515C5F;
+@cqgray1             : #C9CCD3;
+@cqgray2             : #E4E8EA;
+@graymain            : #808284;
+@gray1               : #E2E3E4;
+@gray2               : #C0C2C4;
+@gray3               : #898B8E;
+@graydark            : #404041;
+@rcslatemain         : #3E4E64;
+@rcslate1            : #E2E5E8;
+@rcslate2            : #BBC1C8;
+@rcslate3            : #788391;
+@rcslatedark         : #253244;
+@rchighlightmain     : #F9A51A;
+@rchighlight1        : #FEEDD9;
+@rchighlight2        : #FEDFBC;
+@rchighlight3        : #FCBF79;
+@rchighlightdark     : #B97B0E;
+@sky                 : #8BC0D8;
+@raspberryhohmain    : #A6396D;
+@raspberryhoh1       : #F2E1E9;
+@raspberryhoh2       : #E1BACB;
+@raspberryhoh3       : #C37597;
+@raspberryhohdark    : #7C2651;
+@jademultimediamain  : #05B69C;
+@jademultimedia1     : #D8F4F1;
+@jademultimedia2     : #BCECE6;
+@jademultimedia3     : #4DCCBB;
+@jademultimediadark  : #008976;
 @mangocolumnistsmain : #D7614F;
-@mangocolumnists1 : #FBE5E5;
-@mangocolumnists2 : #E69187;
-@mangocolumnists3 : #EA7972;
+@mangocolumnists1    : #FBE5E5;
+@mangocolumnists2    : #E69187;
+@mangocolumnists3    : #EA7972;
 @mangocolumnistsdark : #A1A738;
-@dembluemain : #005383;
-@demblue1 : #D9EAF0;
-@demblue2 : #AFC9D7;
-@demblue3 : #6094B1;
-@dembluedark : #003B62;
-@repubredmain : #C62C31;
-@repubred1 : #FAE1E2;
-@repubred2 : #F3B9BA;
-@repubred3 : #E77376;
-@repubreddark : #921D1E;
-@grapemain :  #544F90;
-@grape1 : #E8E6F0;
-@grape2 : #C9C5DB;
-@grape3 : #938CB8;
-@grapedark : #3E386D;
-@goldmain : #C19346;
-@gold1 : #F6EFE5;
-@gold2 : #EAD9C3;
-@gold3 : #D5B385;
-@golddark : #8E6E31;
-@orangemain : #CE5C37;
-@orange1 : #F6E7E2;
-@orange2 : #EAC68D;
-@orange3 : #D58E7B;
-@orangedark : #994423;
-@turquoisemain : #0E869A;
-@turquoise1 : #D9EDF1;
-@turquoise2 : #A6D5DB;
-@turquoise3 : #4DABB6;
-@turquoisedark : #036574;
-@grassmain : #459C59;
-@grass1 : #E5F1E7;
-@grass2 : #C2DDC8;
-@grass3 : #85BC91;
-@grassdark : #2E7742;
-@lipstickmain : #C73D49;
-@lipstick1 : #F6E2E4;
-@lipstick2 : #E9BABF;
-@lipstick3 : #D4757F;
-@lipstickdark : #942A33;
-@gridlinesgridlines : #A1A1A1;
-@baselinesbaselines : #5B5B5B;
+@dembluemain         : #005383;
+@demblue1            : #D9EAF0;
+@demblue2            : #AFC9D7;
+@demblue3            : #6094B1;
+@dembluedark         : #003B62;
+@repubredmain        : #C62C31;
+@repubred1           : #FAE1E2;
+@repubred2           : #F3B9BA;
+@repubred3           : #E77376;
+@repubreddark        : #921D1E;
+@grapemain           : #544F90;
+@grape1              : #E8E6F0;
+@grape2              : #C9C5DB;
+@grape3              : #938CB8;
+@grapedark           : #3E386D;
+@goldmain            : #C19346;
+@gold1               : #F6EFE5;
+@gold2               : #EAD9C3;
+@gold3               : #D5B385;
+@golddark            : #8E6E31;
+@orangemain          : #CE5C37;
+@orange1             : #F6E7E2;
+@orange2             : #EAC68D;
+@orange3             : #D58E7B;
+@orangedark          : #994423;
+@turquoisemain       : #0E869A;
+@turquoise1          : #D9EDF1;
+@turquoise2          : #A6D5DB;
+@turquoise3          : #4DABB6;
+@turquoisedark       : #036574;
+@grassmain           : #459C59;
+@grass1              : #E5F1E7;
+@grass2              : #C2DDC8;
+@grass3              : #85BC91;
+@grassdark           : #2E7742;
+@lipstickmain        : #C73D49;
+@lipstick1           : #F6E2E4;
+@lipstick2           : #E9BABF;
+@lipstick3           : #D4757F;
+@lipstickdark        : #942A33;
+@gridlines           : #A1A1A1;
+@baselines           : #5B5B5B;
 
 // Fonts
 .gotham() {
