--- a/_base/graphic.less
+++ b/_base/graphic.less
@@ -8,8 +8,8 @@
 	font-family: GothamNarrow-Book, "Helvetica", "Arial", sans-serif;
 }
 
-.value text{
-    font-family: GothamNarrow-Bold, "Helvetica", "Arial", sans-serif;
-    font-size: 0.9em;
-    fill: #444446;
-}
+// .value text{
+//     font-family: GothamNarrow-Bold, "Helvetica", "Arial", sans-serif;
+//     font-size: 0.9em;
+//     fill: #444446;
+// }
