--- a/_base/lib/base.less
+++ b/_base/lib/base.less
@@ -123,34 +123,34 @@
 @baselines           : #5B5B5B;
 
 // Fonts
-.gotham() {
-  font-family: 'Gotham SSm',Helvetica,Arial,sans-serif;
-  font-weight: normal;
-  font-weight: 400;
-}
+// .gotham() {
+//   font-family: 'Gotham SSm',Helvetica,Arial,sans-serif;
+//   font-weight: normal;
+//   font-weight: 400;
+// }
 
-// Normal Knockout
-.knockout() {
-  font-family: 'Knockout 31 4r','Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  font-weight: normal;
-}
+// // Normal Knockout
+// .knockout() {
+//   font-family: 'Knockout 31 4r','Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+//   font-weight: normal;
+// }
 
-// Knockout, uppercased
-.knockout-upper() {
-  .knockout();
-  text-transform: uppercase;
-}
+// // Knockout, uppercased
+// .knockout-upper() {
+//   .knockout();
+//   text-transform: uppercase;
+// }
 
-// Knockout for headings
-.knockout-header() {
-  .knockout-upper();
-  letter-spacing: 0.05em;
-  -webkit-font-smoothing: antialiased;
-}
+// // Knockout for headings
+// .knockout-header() {
+//   .knockout-upper();
+//   letter-spacing: 0.05em;
+//   -webkit-font-smoothing: antialiased;
+// }
 
-.sans-serif() {
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-}
+// .sans-serif() {
+//   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+// }
 
 //CQRC FONTS
 .gotham-narrow-book() {
@@ -194,7 +194,7 @@ body {
 }
 
 h1 {
-  margin: 0 0 33px 0;
+  margin: 0 0 25px 0;
   font-size: 20px;
   color: #666;
   //font-family: 'Gotham SSm',Helvetica,Arial,sans-serif;
@@ -210,9 +210,8 @@ h2 {
   font-weight: normal;
   font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
   color: #444446;
-  font-size: 12px;
+  font-size: 17px;
   margin: -22px 0 22px 0;
-  line-height: 1.6;
 }
 
 h3 {
@@ -302,7 +301,7 @@ a:hover, a:active { color: #bccae5; }
     label {
       font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
       white-space: nowrap;
-      font-size: 13px;
+      font-size: 14px;
       color: #231F20;
       font-weight: normal;
       -webkit-font-smoothing: antialiased;
@@ -326,7 +325,7 @@ svg { overflow: hidden; }
   }
 
   .tick text{
-    font-size: 1.3em;
+    font-size: 14px;
   }
 
   &.y {
@@ -373,12 +372,12 @@ rect {
   padding: 0;
   list-style-type: none;
   border: none;
-  font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'GothamNarrow-Book', 'Helvetica', 'Arial', sans-serif;
 
   li {
     position: absolute;
     text-align: right;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.3;
     color: #231F20;
     display: table;
@@ -392,7 +391,7 @@ rect {
 }
 
 .value text {
-  font-size: 10px;
+  font-size: 14px;
   -webkit-font-smoothing: antialiased;
 
   &.in { fill: #fff; }
