adding font-weight to 'in' values

--- a/_base/lib/base.less
+++ b/_base/lib/base.less
@@ -380,7 +380,7 @@ rect {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
 
-  &.in { fill: #fff; }
+  &.in { fill: #fff; font-weight: 400; }
   &.out { fill: #444446; }
 }
 
