--- a/table/graphic.less
+++ b/table/graphic.less
@@ -15,7 +15,7 @@ table {
   }
 
   th {
-    .knockout-header();
+    .gotham-narrow-book();
     line-height: 1.2;
     text-align: left;
     vertical-align: bottom;
@@ -126,7 +126,7 @@ table {
     }
 
     tr td:first-child {
-      .knockout-header();
+      .gotham-narrow-book();
       color: #333;
       font-size: 14px;
       margin-bottom: 6px;
