deletes duplicate column chart, edits styles and script in column_chart

--- a/column_chart/graphic.less
+++ b/column_chart/graphic.less
@@ -1,12 +1,11 @@
 @import "./lib/base";
 
 /* Implement the CQRC styles for column chart. */
-.axis path{
-    stroke: #fff;
+.axis path {
+    stroke: none;
 }
+
 .value text.in,
 .value text.out {
-    fill: #444446;
-    font-family: 'GothamNarrow-Bold', 'Helvetica', 'Arial', sans-serif;
-    font-size: 0.8em;
+    font-family: 'GothamNarrow-Medium', 'Helvetica', 'Arial', sans-serif;
 }
