updates base and bar styles

--- a/_base/lib/base.less
+++ b/_base/lib/base.less
@@ -378,7 +378,7 @@ rect {
 
   li {
     position: absolute;
-    text-align: right;
+    text-align: left;
     font-size: 14px;
     line-height: 1.3;
     color: #231F20;
@@ -393,6 +393,8 @@ rect {
 }
 
 .value text {
+  position: relative;
+  font-family: 'GothamNarrow-Medium', 'Helvetica', 'Arial', sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
 
